css und visManager

--- a/AgrarAlpha_v1/war/AgrarAlpha_v1.css
+++ b/AgrarAlpha_v1/war/AgrarAlpha_v1.css
@@ -22,7 +22,7 @@
 	height: 1000px;
 }
 
-/** Example rules used by the template application (remove for your app) */
+/** EXAMPLE RULES used by the template application (remove for your app) */
 h1 {
   font-size: 2em;
   font-weight: bold;
