--- a/AgrarAlpha_v1/war/AgrarAlpha_v1.css
+++ b/AgrarAlpha_v1/war/AgrarAlpha_v1.css
@@ -3,6 +3,7 @@
 .homeBtn{
 	background-color: #dadbfe;
 	border-bottom: 1px solid #0041ab;
+	border: none;
 	height: 50px;
 	width: 100px;
 	font-weight: bold;
@@ -11,6 +12,7 @@
 .otherBtn{
 	background-color: white;
 	border-bottom: 1px solid #0041ab;
+	border: none;
 	height: 40px;
 	width: 100px;
 }
@@ -19,7 +21,14 @@
 	width: 100px;
 	border-right: 1px solid #0041ab;
 	align: center top;
-	height: 1000px;
+}
+
+.table{
+	
+}
+
+.map{
+	
 }
 
 /** EXAMPLE RULES used by the template application (remove for your app) */
