--- a/AgrarAlpha_v1/war/AgrarAlpha_v1.css
+++ b/AgrarAlpha_v1/war/AgrarAlpha_v1.css
@@ -4,10 +4,11 @@
 	background-color: #dadbfe;
 	border: none;
 	border-bottom: 1px solid #0041ab;
-	font-size: 12pt;
+	font-size: 10pt;
 	height: 50px;
 	width: 100px;
 	font-weight: bold;
+	font: serif;
 }
 
 .otherBtn{
@@ -17,12 +18,19 @@
 	height: 40px;
 	width: 100px;
 	font-size: 10pt;
+	font: serif;
 }
 
 .verticalPanel{
 	width: 100px;
 	border-right: 1px solid #0041ab;
 	align: center top;
+}
+
+.message{
+	background-color: white;
+	font: serif italic 10pt balck;
+	
 }
 
 .table{
