--- a/AgrarAlpha_v1/war/AgrarAlpha_v1.css
+++ b/AgrarAlpha_v1/war/AgrarAlpha_v1.css
@@ -8,7 +8,7 @@
 	height: 50px;
 	width: 100px;
 	font-weight: bold;
-	font: serif;
+	font-family: serif;
 }
 
 .otherBtn{
@@ -18,7 +18,7 @@
 	height: 40px;
 	width: 100px;
 	font-size: 10pt;
-	font: serif;
+	font-family: serif;
 }
 
 .verticalPanel{
