--- a/AgrarAlpha_v1/war/AgrarAlpha_v1.css
+++ b/AgrarAlpha_v1/war/AgrarAlpha_v1.css
@@ -36,46 +36,16 @@
 .table{
 	height: 600px;
 	width: 600px;
+	padding: 10px;
 }
 
 .map{
 	height: 600px;
 	width: 600px;
+	padding: 10px;
 }
 
 .tabPanel{
 	border: 1px solid black;
 	padding: 10px;
-}
-
-/** EXAMPLE RULES used by the template application (remove for your app) */
-h1 {
-  font-size: 2em;
-  font-weight: bold;
-  color: #777777;
-  margin: 40px 0px 70px;
-  text-align: center;
-}
-
-.sendButton {
-  display: block;
-  font-size: 16pt;
-}
-
-/** Most GWT widgets already have a style name defined */
-.gwt-DialogBox {
-  width: 400px;
-}
-
-.dialogVPanel {
-  margin: 5px;
-}
-
-.serverResponseLabelError {
-  color: red;
-}
-
-/** Set ids using widget.getElement().setId("idOfElement") */
-#closeButton {
-  margin: 15px 6px 6px;
 }
